[project]
name = "integrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sam.crauwels", email = "sam.crauwels@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
integrator = "integrator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
